--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.3.3",
+    "axios": "^0.19.2",
+    "emailjs": "^3.0.0",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-material-ui-carousel": "^1.5.1",
+    "react-material-ui-form-validator": "^2.0.10",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
