--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.3.3",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.6",
+    "normalize.css": "^8.0.1",
+    "npm": "^6.14.5",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
+    "react-animated-slider-2": "^1.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "react-id-swiper": "^3.0.0",
     "react-material-ui-carousel": "^1.5.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swiper": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
