--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "axios": "^0.19.2",
     "emailjs": "^3.0.0",
     "font-awesome": "^4.7.0",
-    "i": "^0.3.6",
-    "normalize.css": "^8.0.1",
-    "npm": "^6.14.5",
     "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
+    "i": "^0.3.6",
+    "material-ui": "^0.20.2",
+    "normalize.css": "^8.0.1",
+    "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
     "react-animated-slider-2": "^1.1.5",
