commit with settper modification

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.14.0",
     "emailjs": "^3.0.0",
     "font-awesome": "^4.7.0",
     "google-map-react": "^1.1.7",
@@ -29,10 +30,13 @@
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
     "react-animated-slider-2": "^1.1.5",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-id-swiper": "^3.0.0",
+    "react-material-ui-calendar": "^0.2.3",
     "react-material-ui-carousel": "^1.5.1",
     "react-material-ui-form-validator": "^2.0.10",
     "react-modal-video": "^1.2.3",
