--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@sendgrid/mail": "^7.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -25,6 +26,7 @@
     "material-ui": "^0.20.2",
     "mongodb": "^2.2.33",
     "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.17",
     "normalize.css": "^8.0.1",
     "npm": "^6.14.5",
     "react": "^16.13.1",
@@ -54,7 +56,7 @@
     "eject": "react-scripts eject",
     "client": "react-scripts start",
     "server": "cd ./src/backend/server && node server.js",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"nodemon server.js\" \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": "react-app"
